--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -5,3 +5,37 @@
   overflow-y: auto;
   max-height: 85vh;
 }
+
+.main-container__form::-webkit-scrollbar {
+  width: 8px;     /* Tamaño del scroll en vertical */
+  height: 8px;   /* Tamaño del scroll en horizontal*/
+} 
+
+/* Ponemos un color de fondo y redondeamos las esquinas del thumb */
+.main-container__form::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 4px;
+}
+
+/* Cambiamos el fondo y agregamos una sombra cuando esté en hover */
+.main-container__form::-webkit-scrollbar-thumb:hover {
+  background: #b3b3b3;
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+/* Cambiamos el fondo cuando esté en active */
+.main-container__form::-webkit-scrollbar-thumb:active {
+  background-color: #999999;
+}
+
+/* Ponemos un color de fondo y redondeamos las esquinas del track */
+.main-container__form::-webkit-scrollbar-track {
+  background: #e1e1e1;
+  border-radius: 4px;
+}
+
+/* Cambiamos el fondo cuando esté en active o hover */
+.main-container__form::-webkit-scrollbar-track:hover,
+.main-container__form::-webkit-scrollbar-track:active {
+background: #d4d4d4;
+}
