--- a/src/components/PreviewList/PreviewList.css
+++ b/src/components/PreviewList/PreviewList.css
@@ -21,3 +21,37 @@
 .list-group-item:hover {
   background-color: #F4F4F8;
 }
+
+.ripple-loader {
+  position: relative;
+  width: 15px;
+  height: 15px;
+}
+
+.ripple-loader div {
+  position: absolute;
+  border: 2px solid #00e676;
+  border-radius: 50%;
+  animation: ripple-loader 1s ease-out infinite;
+}
+
+.ripple-loader div:nth-child(2) {
+  animation-delay: -2s;
+}
+
+@keyframes ripple-loader {
+  0% {
+    top: 5px;
+    left: 5px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0;
+    left: 0;
+    width: 15px;
+    height: 15px;
+    opacity: 0;
+  }
+}
