--- a/src/components/Graphics/Graphics.css
+++ b/src/components/Graphics/Graphics.css
@@ -22,6 +22,16 @@
   width: 100%;
 }
 
+.main-container__report--info {
+  display: grid;
+  grid-template-columns: 50% 50%;
+
+}
+
+#playerPicture {
+  width: 260px;
+}
+
 .main-container__report--warning {
   margin: auto;
   font-weight: 500;
